# crabgrad

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: main.rs
examples/: losses.rs  main.rs  mlp.rs  mnist.rs  unit-vector.rs
pytorch-examples/: losses.py  mlp.py  mnist.py  requirements.in  requirements.txt  unit-vector.py
src/: engine.rs  graph_topo.rs  lib.rs  nn.rs  ops.rs  optim.rs  util.rs  utils.rs
src/lib/: engine.rs  lib.rs  ops.rs  optim.rs  utils.rs
src/lib/nn/: loss.rs  mod.rs  models.rs  trainer.rs
src/nn/: loss.rs  mod.rs  models.rs
tests/: integration_test.rs  utils.rs
torch-examples/: README.md  losses.py  requirements.in  requirements.txt
