[package]
name = "crabgrad"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "A simple and non-optimized reverse-mode automatic differentiation library in Rust, heavily inspired by https://github.com/karpathy/micrograd/."
repository = "https://github.com/nik-sm/crabgrad"
keywords = ["automatic differentiation", "autograd", "reverse-mode", "neural networks"]
categories = ["science", "mathematics"]
license-file = "LICENSE"

[lib]
path="src/lib/lib.rs"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
colored = "3.0.0"
env_logger = "0.11.8"
indicatif = "0.17.11"
itertools = "0.14.0"
log = "0.4.27"
paste = "1.0.15"
rand = { version = "0.9.1", features = ["std_rng"] }
rand_distr = "0.5.1"

[dev-dependencies]
criterion = "0.6.0"
flamegraph = "0.6.8"
hf-hub = "0.4.2"
image = "0.25.6"
parquet = "55.1.0"
tch = { version = "0.20.0", features = ["download-libtorch"] }

[lints.clippy]
all = "warn"
cargo = "warn"
correctness = "deny"

[profile.release-lto]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
opt-level = 2

[[bench]]
name = "benchmark"
harness = false
path = "benches/main.rs"
